// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render a single author 1`] = `
<a
  dir="auto"
  href="/profile/alexandra-frean"
  role="link"
>
  Alexandra Frean
</a>
`;

exports[`2. Render a given section colour 1`] = `
<a
  dir="auto"
  href="/profile/alexandra-frean"
  role="link"
  style={
    Object {
      "color": "blue",
    }
  }
>
  Alexandra Frean
</a>
`;

exports[`3. Render an inline element when no author provided 1`] = `
<div
  dir="auto"
>
  Lindsay McIntosh Scottish Political Editor
</div>
`;

exports[`4. Render an author first 1`] = `
Array [
  <a
    dir="auto"
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>,
  <div
    dir="auto"
  >
    , Environment Editor
  </div>,
]
`;

exports[`5. Render an author last 1`] = `
Array [
  <div
    dir="auto"
  >
    RBS Six Nations 
  </div>,
  <a
    dir="auto"
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>,
]
`;

exports[`6. Render multiple authors separated by commas 1`] = `
Array [
  <a
    dir="auto"
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>,
  <div
    dir="auto"
  >
    , 
  </div>,
  <a
    dir="auto"
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>,
  <div
    dir="auto"
  >
    , 
  </div>,
  <a
    dir="auto"
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>,
]
`;

exports[`7. Render multiple authors separated by spaces 1`] = `
Array [
  <a
    dir="auto"
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>,
  <div
    dir="auto"
  >
     
  </div>,
  <a
    dir="auto"
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>,
  <div
    dir="auto"
  >
     
  </div>,
  <a
    dir="auto"
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>,
]
`;

exports[`8. Render null when AST is empty 1`] = `null`;

exports[`9. Render an author with given styles 1`] = `
<a
  dir="auto"
  href="/profile/alexandra-frean"
  role="link"
  style={
    Object {
      "color": "red",
    }
  }
>
  Alexandra Frean
</a>
`;
